# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api
 definitions:
-  main.Category:
+  models.Category:
     properties:
       description:
         type: string
@@ -9,15 +9,19 @@ definitions:
       name:
         type: string
     type: object
-  main.Produk:
+  models.Product:
     properties:
-      harga:
+      category_id:
         type: integer
+      category_name:
+        type: string
       id:
         type: integer
-      nama:
+      name:
         type: string
-      stok:
+      price:
+        type: integer
+      stock:
         type: integer
     type: object
 host: localhost:8080
@@ -44,7 +48,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/main.Category'
+              $ref: '#/definitions/models.Category'
             type: array
       summary: Get all categories
       tags:
@@ -59,14 +63,14 @@ paths:
         name: category
         required: true
         schema:
-          $ref: '#/definitions/main.Category'
+          $ref: '#/definitions/models.Category'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/main.Category'
+            $ref: '#/definitions/models.Category'
         "400":
           description: Invalid request body
           schema:
@@ -117,7 +121,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Category'
+            $ref: '#/definitions/models.Category'
         "400":
           description: Invalid ID or Category not found
           schema:
@@ -144,14 +148,14 @@ paths:
         name: category
         required: true
         schema:
-          $ref: '#/definitions/main.Category'
+          $ref: '#/definitions/models.Category'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Category'
+            $ref: '#/definitions/models.Category'
         "400":
           description: Invalid request or Category not found
           schema:
@@ -173,7 +177,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/main.Produk'
+              $ref: '#/definitions/models.Product'
             type: array
       summary: Get all products
       tags:
@@ -188,14 +192,14 @@ paths:
         name: product
         required: true
         schema:
-          $ref: '#/definitions/main.Produk'
+          $ref: '#/definitions/models.Product'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/main.Produk'
+            $ref: '#/definitions/models.Product'
         "400":
           description: Invalid request body
           schema:
@@ -246,7 +250,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Produk'
+            $ref: '#/definitions/models.Product'
         "400":
           description: Invalid ID or Product not found
           schema:
@@ -273,14 +277,14 @@ paths:
         name: product
         required: true
         schema:
-          $ref: '#/definitions/main.Produk'
+          $ref: '#/definitions/models.Product'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Produk'
+            $ref: '#/definitions/models.Product'
         "400":
           description: Invalid request or Product not found
           schema:
